integration-tests/tests/snapshots/metrics__every_family.snap
---
source: integration-tests/tests/metrics.rs
expression: scrape
---
# HELP martin_http_requests_duration_seconds HTTP request duration in seconds for all requests
# TYPE martin_http_requests_duration_seconds histogram
martin_http_requests_duration_seconds_bucket{endpoint="/catalog",method="GET",status="200",le="0.005"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/catalog",method="GET",status="200",le="0.01"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/catalog",method="GET",status="200",le="0.025"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/catalog",method="GET",status="200",le="0.05"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/catalog",method="GET",status="200",le="0.1"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/catalog",method="GET",status="200",le="0.25"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/catalog",method="GET",status="200",le="0.5"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/catalog",method="GET",status="200",le="1"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/catalog",method="GET",status="200",le="2.5"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/catalog",method="GET",status="200",le="5"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/catalog",method="GET",status="200",le="10"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/catalog",method="GET",status="200",le="+Inf"} 1
martin_http_requests_duration_seconds_sum{endpoint="/catalog",method="GET",status="200"} [SECONDS]
martin_http_requests_duration_seconds_count{endpoint="/catalog",method="GET",status="200"} 1
martin_http_requests_duration_seconds_bucket{endpoint="/health",method="GET",status="200",le="0.005"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/health",method="GET",status="200",le="0.01"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/health",method="GET",status="200",le="0.025"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/health",method="GET",status="200",le="0.05"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/health",method="GET",status="200",le="0.1"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/health",method="GET",status="200",le="0.25"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/health",method="GET",status="200",le="0.5"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/health",method="GET",status="200",le="1"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/health",method="GET",status="200",le="2.5"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/health",method="GET",status="200",le="5"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/health",method="GET",status="200",le="10"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/health",method="GET",status="200",le="+Inf"} 1
martin_http_requests_duration_seconds_sum{endpoint="/health",method="GET",status="200"} [SECONDS]
martin_http_requests_duration_seconds_count{endpoint="/health",method="GET",status="200"} 1
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}",method="GET",status="200",le="0.005"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}",method="GET",status="200",le="0.01"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}",method="GET",status="200",le="0.025"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}",method="GET",status="200",le="0.05"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}",method="GET",status="200",le="0.1"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}",method="GET",status="200",le="0.25"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}",method="GET",status="200",le="0.5"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}",method="GET",status="200",le="1"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}",method="GET",status="200",le="2.5"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}",method="GET",status="200",le="5"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}",method="GET",status="200",le="10"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}",method="GET",status="200",le="+Inf"} 1
martin_http_requests_duration_seconds_sum{endpoint="/{source_ids}",method="GET",status="200"} [SECONDS]
martin_http_requests_duration_seconds_count{endpoint="/{source_ids}",method="GET",status="200"} 1
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="200",le="0.005"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="200",le="0.01"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="200",le="0.025"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="200",le="0.05"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="200",le="0.1"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="200",le="0.25"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="200",le="0.5"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="200",le="1"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="200",le="2.5"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="200",le="5"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="200",le="10"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="200",le="+Inf"} 3
martin_http_requests_duration_seconds_sum{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="200"} [SECONDS]
martin_http_requests_duration_seconds_count{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="200"} 3
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="404",le="0.005"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="404",le="0.01"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="404",le="0.025"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="404",le="0.05"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="404",le="0.1"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="404",le="0.25"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="404",le="0.5"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="404",le="1"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="404",le="2.5"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="404",le="5"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="404",le="10"} [COUNT]
martin_http_requests_duration_seconds_bucket{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="404",le="+Inf"} 1
martin_http_requests_duration_seconds_sum{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="404"} [SECONDS]
martin_http_requests_duration_seconds_count{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="404"} 1
# HELP martin_http_requests_total Total number of HTTP requests
# TYPE martin_http_requests_total counter
martin_http_requests_total{endpoint="/catalog",method="GET",status="200"} 1
martin_http_requests_total{endpoint="/health",method="GET",status="200"} 1
martin_http_requests_total{endpoint="/{source_ids}",method="GET",status="200"} 1
martin_http_requests_total{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="200"} 3
martin_http_requests_total{endpoint="/{source_ids}/{z}/{x}/{y}",method="GET",status="404"} 1
# HELP martin_tile_cache_requests_total Martin tile-coordinate cache lookups, labeled by cache type, hit/miss result, and zoom
# TYPE martin_tile_cache_requests_total counter
martin_tile_cache_requests_total{cache="tile",result="hit",zoom="0"} 2
martin_tile_cache_requests_total{cache="tile",result="miss",zoom="0"} 1
